# cue-shell

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  SPARK.md  _typos.toml  fix_spawn_chain.py  justfile  prek.toml  pyproject.toml  rust-toolchain.toml
.github/: pull_request_template.md
.github/workflows/: cd-publish.yml  ci-build-test.yml  ci-package-smoke.yml  ci-pr-checks.yml  ci-static-checks.yml  ci.yml  copilot-setup-steps.yml
crates/cue-cli/: Cargo.toml
crates/cue-cli/src/: companion_binary.rs  config.rs  daemon_lifecycle.rs  extension_dispatch.rs  frontend_connection.rs  lib.rs  main.rs  path_lookup.rs  script_runner.rs  tracing_config.rs  tui.rs  version_check.rs
crates/cue-cli/tests/: daemon_integration.rs
crates/cue-client/: Cargo.toml
crates/cue-client/src/: cli.rs  client.rs  config_paths.rs  daemon_lifecycle.rs  host_discovery.rs  lib.rs  reconnect.rs  restart.rs  script_runner.rs  ssh_config.rs  ssh_transport.rs  transport_config.rs  transport_settings.rs  version_check.rs
crates/cue-core/: Cargo.toml
crates/cue-core/src/: chain.rs  command.rs  command_spec.rs  cron.rs  event_channel.rs  id.rs  ipc.rs  job.rs  lib.rs  mode.rs  pipeline.rs  process_status.rs  resource.rs
crates/cue-core/tests/: markdown_links.rs
crates/cue-daemon/: Cargo.toml
crates/cue-daemon/src/: cli.rs  command_util.rs  config.rs  dirs.rs  gateway_stdio.rs  lib.rs  pty.rs  ring_buffer.rs  runtime_env.rs  service.rs  storage.rs  upgrade.rs  word_expansion.rs
crates/cue-daemon/src/actor/: cron_schedule.rs  event_bus.rs  gateway.rs  mod.rs  process_mgr.rs  scheduler.rs  scope_store.rs  script_record.rs
crates/cue-daemon/src/parser/: ast.rs  duration.rs  mod.rs  parse.rs  resolver.rs  token.rs  tokenizer.rs
crates/cue-daemon/src/resource/: cli.rs  mock.rs  mod.rs  nvidia.rs  provider.rs  registry.rs
crates/cue-daemon/tests/: daemon_integration.rs
crates/cue-daemon/tests/fixtures/cli-provider/: missing-grant.sh  success.sh
crates/cue-tui/: Cargo.toml
crates/cue-tui/src/: ansi.rs  app.rs  card_action.rs  cli.rs  client.rs  clipboard.rs  completion.rs  display.rs  event.rs  focus.rs  footer.rs  foreground.rs  geometry.rs  history.rs  job_picker.rs  lib.rs  message.rs  mouse_mode.rs  record_format.rs  script_summary.rs  sidebar_action.rs  status_view.rs  submission.rs  target_config.rs  target_settings.rs  terminal.rs  ui.rs
crates/cue-tui/src/component/: input_line.rs  main_view.rs  mod.rs  sidebar.rs  status_bar.rs
crates/cued/: Cargo.toml
crates/cued/src/: config.rs  dirs.rs  lib.rs  main.rs  pty.rs  ring_buffer.rs  service.rs  storage.rs  weft.rs
crates/cued/src/actor/: event_bus.rs  gateway.rs  mod.rs  process_mgr.rs  scheduler.rs  scope_store.rs
crates/cued/src/parser/: ast.rs  parse.rs  resolver.rs  token.rs  tokenizer.rs
crates/cued/tests/: integration.rs
docs/design/: DESIGN.md  README.md  commands-and-modes.md  conceptual-model.md  core-types.md  cue-script.md  daemon-architecture.md  ipc-agent-residue-audit.md  ipc-protocol.md  parser.md  transport-modes.md  tui.md
docs/design/research/: competitive-landscape.md
docs/research/: competitive-landscape.md  extensions-and-wrappers.md  syntax-decisions.md
examples/: chain.cue  fail.cue  hello.cue
