[workspace]
resolver = "2"
members = [
  "crates/cue-cli",
  "crates/cue-core",
  "crates/cue-tui",
  "crates/cued",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
repository = "https://github.com/zrr1999/cue-shell"
license = "MIT"

[workspace.dependencies]
# Error handling
anyhow = "1"
# CLI
bpaf = { version = "0.9", features = ["dull-color"] }
crossterm = { version = "0.29", features = ["bracketed-paste", "events"] }
# Color
owo-colors = "4"
# TUI
ratatui = "0.30"
# Storage
rusqlite = { version = "0.39", features = ["bundled"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# Async runtime
tokio = { version = "1", features = [
  "io-util",
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "signal",
  "sync",
  "time"
] }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.test]
opt-level = 1
