[workspace]
resolver = "2"
members = [
  "crates/cue-cli",
  "crates/cue-client",
  "crates/cue-core",
  "crates/cue-daemon",
  "crates/cue-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
repository = "https://github.com/zrr1999/cue-shell"
license = "MIT"

[workspace.dependencies]
# Color
ansi-to-tui = "8"
# Error handling
anyhow = "1"
base64 = "0.22"
# Hashing
blake3 = "1"
# CLI
bpaf = { version = "0.9", features = ["dull-color"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crossterm = { version = "0.29", features = ["bracketed-paste", "events"] }
libc = "0.2"
owo-colors = "4"
# TUI
ratatui = "0.30"
# Storage
rusqlite = { version = "0.40", features = ["bundled"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# Async runtime
tokio = { version = "1", features = [
  "io-std",
  "io-util",
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "signal",
  "sync",
  "time"
] }
toml = "1.1"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tui-term = "0.3"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.test]
opt-level = 1
