[package]
name = "cue-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "CLI entry point for cue-shell: command parsing, mode dispatch"
repository.workspace = true
license.workspace = true

[[bin]]
name = "cue"
path = "src/main.rs"

[[bin]]
name = "cued"
path = "src/bin/cued.rs"
required-features = ["daemon"]

[[bin]]
name = "cue-tui"
path = "src/bin/cue-tui.rs"
required-features = ["tui"]

[[test]]
name = "daemon_integration"
path = "tests/daemon_integration.rs"
required-features = ["daemon"]

[dependencies]
anyhow.workspace = true
base64 = { workspace = true, optional = true }
cue-client = { path = "../cue-client", optional = true }
cue-core = { path = "../cue-core" }
cue-daemon = { path = "../cue-daemon", optional = true }
cue-tui = { path = "../cue-tui", optional = true }
serde = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
libc.workspace = true
serde_json.workspace = true
tokio.workspace = true

[features]
default = ["daemon", "extensions", "script", "tui"]
daemon = ["dep:cue-daemon"]
extensions = [
  "dep:cue-client",
  "dep:serde",
  "dep:toml",
]
script = [
  "dep:base64",
  "dep:cue-client",
  "dep:serde",
  "dep:tokio",
  "dep:toml",
  "dep:tracing",
  "dep:tracing-subscriber",
]
tui = [
  "dep:cue-client",
  "dep:cue-tui",
  "dep:serde",
  "dep:tokio",
  "dep:toml",
  "dep:tracing",
  "dep:tracing-subscriber",
]
