[package]
name = "cue-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "CLI entry point for cue-shell: command parsing, mode dispatch"
repository.workspace = true
license.workspace = true

[[bin]]
name = "cue"
path = "src/main.rs"

# Packaging-only wrappers: the implementation owners remain cue-client,
# cue-tui, and cue-daemon; these targets are enabled only for the PyPI
# `cue-shell` package because maturin packages binaries from one Cargo package.
[[bin]]
name = "cue-client"
path = "src/bin/cue-client.rs"
required-features = ["python-package"]

[[bin]]
name = "cue-tui"
path = "src/bin/cue-tui.rs"
required-features = ["python-package"]

[[bin]]
name = "cue-daemon"
path = "src/bin/cue-daemon.rs"
required-features = ["python-package"]

[[bin]]
name = "cued"
path = "src/bin/cued.rs"
required-features = ["python-package"]

[dependencies]
anyhow.workspace = true
cue-client = { path = "../cue-client" }
cue-core = { path = "../cue-core" }
cue-daemon = { path = "../cue-daemon", optional = true }
cue-tui = { path = "../cue-tui", optional = true }
serde.workspace = true
toml.workspace = true

[dev-dependencies]
libc.workspace = true

[features]
# Enabled only by pyproject/maturin so the Python wheel exposes all first-party
# command names while Rust workspace ownership remains split across crates.
python-package = [
  "dep:cue-daemon",
  "dep:cue-tui",
]
# Deprecated compatibility features; `cue run`/`cue tui` now forward to companion binaries.
script = []
tui = []
