[package]
name = "cue-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core domain types and pure logic for cue-shell: Job, Cron, Scope, Chain"
repository.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
blake3.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
