[package]
name = "cue-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Background daemon for cue-shell: Unix socket server, job orchestration"
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
bpaf.workspace = true
chrono.workspace = true
cue-core = { path = "../cue-core" }
libc.workspace = true
nvml-wrapper = { version = "0.12", optional = true }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]

[features]
default = []
gpu-nvidia = ["dep:nvml-wrapper"]
