[package]
name = "cue-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "TUI frontend for cue-shell: mode switching, command input, job display"
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
cue-core = { path = "../cue-core" }
ratatui.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
