[package]
name = "cue-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "TUI frontend for cue-shell: mode switching, command input, job display"
repository.workspace = true
license.workspace = true

[dependencies]
ansi-to-tui.workspace = true
anyhow.workspace = true
base64.workspace = true
crossterm.workspace = true
cue-client = { path = "../cue-client" }
cue-core = { path = "../cue-core" }
ratatui.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tui-term.workspace = true

[dev-dependencies]
