[package]
name = "cued"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Background daemon for cue-shell: Unix socket server, job orchestration"
repository.workspace = true
license.workspace = true

[[bin]]
name = "cued"
path = "src/main.rs"

[dependencies]
cue-core = { path = "../cue-core" }

[dev-dependencies]
