[package]
name = "cued"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Background daemon for cue-shell: Unix socket server, job orchestration"
repository.workspace = true
license.workspace = true

[[bin]]
name = "cued"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bpaf.workspace = true
cue-core = { path = "../cue-core" }
libc = "0.2"
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
